styles.css
/*===================
Table of Content

1. Global Properties
2. Header
  2a. Navigation Bar
3. Main Section
  3a. Brand Info
  3b. Gallery
4. Footer
5. Media Queries
====================*/

/* ==========
  Global Properties
  ==========*/
:root {
  --primary: rgba(36, 36, 36, 0.5);
  --secondary: rgba(36, 36, 36, 0);
}

body,
html {
  color: white;
  font-family: "Alata", sans-serif;
  font-size: 15px;
  margin: 0;
  padding: 0;
  width: 100%;
}

h1,
h2,
button,
.menu-links {
  font-family: "Josefin Sans", sans-serif;
  text-decoration: none;
  text-transform: uppercase;
}

.container {
  min-width: 350px;
}

/* ==========
  Header
  ==========*/
header {
  background-image: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)),
    url(images/desktop/image-hero.jpg);
  background-size: cover;
  background-position: center;
  padding: 0 2em;
}

h1 {
  border: 2.5px solid white;
  font-size: 2.5rem;
  padding: 0.5em 1em 0.5em 0em;
}

.hero {
  min-width: 300px;
  padding: 15em 0;
}

/* ==========
    Navigation Bar
    ==========*/
.close-icon {
  display: none;
}

.hamburger {
  cursor: pointer;
  height: 2em;
  position: absolute;
  right: 2em;
  top: 3em;
  width: 2em;
  z-index: 2;
}

.main-logo {
  position: absolute;
  top: 3em;
}

.logo {
  width: 12rem;
}

.wrapper {
  background: black;
  height: 100%;
  width: 100%;
  left: 0;
  right: 0;
  position: fixed;
  transform: translateY(-160%);
  transition: transform 0.2s;
  z-index: 1;
}

.menu {
  display: grid;
  grid-template-rows: repeat(5, 80px);
  padding: 1em;
  justify-content: start;
}

.menu-links {
  color: white;
  font-size: 2rem;
  margin: 2em 1em;
}

.menu-logo {
  padding-top: 2em;
  padding-left: 2em;
}

.show-menu {
  transform: translateY(0);
}

/* ==========
  Main Section
  ==========*/
main {
  background: white;
  padding: 3em 0;
}

/* ==========
    Brand Info
    ==========*/
h2 {
  color: black;
  font-size: 2em;
  text-align: center;
}

.brand {
  padding: 6em 2em 0;
  text-align: center;
}

.brand-info {
  padding: 1em;
}

.brand-pg {
  color: hsl(0, 0%, 55%);
  line-height: 2;
}

.interactivity {
  padding-bottom: 1.5em;
  width: 100%;
}

/* ==========
    Gallery
    ==========*/
button {
  background-color: white;
  border: 1.5px solid black;
  font-size: 0.9rem;
  font-weight: bold;
  margin: 40px auto;
  padding: 0.75em 2.5em;
}

button:hover {
  background: black;
  color: white;
  transition: 0.5s ease;
}

.desktop-button {
  display: none;
}

.gallery {
  padding: 4em 2em;
}

.grid {
  display: grid;
  grid-template-columns: auto;
  grid-template-rows: repeat(8, 120px);
  row-gap: 30px;
  text-transform: uppercase;
}

.item {
  font-family: "Josefin Sans", sans-serif;
  font-size: 1.5rem;
  padding-left: 1em;
  width: 60%;
}

.photo {
  align-items: flex-end;
  display: flex;
}

.deep-earth {
  background: linear-gradient(to right, var(--primary), var(--secondary)),
    url(images/desktop/image-deep-earth.jpg) no-repeat 60% 70% / cover;
}

.night-arcade {
  background: linear-gradient(to right, var(--primary), var(--secondary)),
    url(images/desktop/image-night-arcade.jpg) repeat 97% 45% / cover;
}

.soccor-vr {
  background: linear-gradient(to right, var(--primary), var(--secondary)),
    url(images/desktop/image-soccer-team.jpg) no-repeat 0 8% / cover;
}

.the-grid {
  background: linear-gradient(to right, var(--primary), var(--secondary)),
    url(images/desktop/image-grid.jpg) no-repeat 0 40% / cover;
}

.above-vr {
  background: linear-gradient(to right, var(--primary), var(--secondary)),
    url(images/desktop/image-from-above.jpg) no-repeat 0 20% / cover;
}

.pocket-borealis {
  background: linear-gradient(to right, var(--primary), var(--secondary)),
    url(images/desktop/image-pocket-borealis.jpg) no-repeat 0 30% / cover;
}

.curiosity {
  background: linear-gradient(to right, var(--primary), var(--secondary)),
    url(images/desktop/image-curiosity.jpg) no-repeat 0 10% / cover;
}

.fisheye {
  background: linear-gradient(to right, var(--primary), var(--secondary)),
    url(images/desktop/image-fisheye.jpg) no-repeat 0 75% / cover;
}

.seeall {
  display: flex;
  justify-content: center;
}

/* ==========
  Footer
  ==========*/
footer {
  background: black;
  text-align: center;
  padding: 4em 0;
  margin-top: -5em;
}

.footer-logo,
.additional-info {
  padding-bottom: 2em;
}

.copyright {
  color: hsl(0, 0%, 41%);
}

.contacts img {
  padding: 0 0.5rem;
}

.attribution {
  color: black;
  margin-bottom: 0;
}

.additional-info > a {
  color: white;
  margin: 0 1em 0 0;
  text-decoration: none;
}

/* ==========
  Media Queries
  ==========*/
@media (min-width: 45em) and (max-width: 62.5em) {
  h1,
  .interactivity,
  .brand-info {
    max-width: 70%;
  }

  /* ==========
Header
==========*/
  h1 {
    font-size: 3rem;
    text-align: left;
    padding: 2em 1em 2em;
  }

  .hero {
    display: flex;
    justify-content: center;
  }

  /* ==========
Brand Info
==========*/
  .brand-info {
    margin: 0 auto;
  }

  /* ==========
Gallery
==========*/
  .gallery {
    align-items: center;
    display: flex;
    flex-direction: column;
    justify-content: center;
  }

  .grid {
    width: 70%;
  }

  .photo:hover {
    opacity: 0.8;
    transform: scale(1.1);
    transition: 0.2s ease;
  }
}

@media (min-width: 62.5em) {
  h2 {
    font-size: 3vw;
    text-align: left;
  }

  /* ==========
Header
==========*/
  h1 {
    font-size: 4.2rem;
    font-weight: normal;
    max-width: 35vw;
    padding: 0.5em 2em 0.5em 0.75em;
    text-align: left;
  }

  .main-logo {
    left: 8em;
    top: 4em;
    width: 14em;
  }

  .hero {
    display: block;
    padding: 12em 0 5em 6em;
  }

  /* ==========
    Navigation Bar
    ==========*/
  .hamburger,
  .menu-logo,
  .show-menu {
    display: none;
  }

  .wrapper {
    background: none;
    position: absolute;
    top: 4em;
    transform: translateY(10);
    transition: none;
  }

  .menu {
    display: flex;
    flex-direction: row;
    right: 4em;
    position: absolute;
    top: -2.5em;
  }

  .menu-links,
  .footer-links {
    font-family: "Alata", sans-serif;
    font-size: 1rem;
    position: relative;
    text-transform: none;
  }

  .menu-links::after,
  .footer-links::after {
    background: white;
    content: "";
    height: 3px;
    left: 0;
    margin-top: 0.4em;
    position: absolute;
    top: 100%;
    transition: transform 0.5s;
    transform: scaleX(0);
    transform-origin: left;
    width: 100%;
  }

  .menu-links:hover::after,
  .footer-links:hover::after {
    transform: scaleX(1);
  }

  /* ==========
Main Content
==========*/
  /* ==========
  Brand Info
  ==========*/
  .brand {
    display: grid;
    grid-template-columns: 1fr 1em 1.25fr;
    grid-template-rows: 9em 1fr;
    padding: 6em 8em;
    text-align: left;
  }

  .brand-pg {
    font-size: 1.1vw;
  }

  .interactivity {
    grid-column: 1/-1;
    grid-row: 1/-1;
    max-width: 50vw;
  }

  .brand-info {
    background: white;
    display: block;
    grid-column: -3/-1;
    grid-row: -2/-1;
    height: auto;
    max-width: 50vw;
    min-width: 20vw;
    padding: 3em 4em;
    z-index: 1;
  }

  /* ==========
  Gallery
  ==========*/
  button {
    font-size: 1rem;
    margin: 0;
    text-align: right;
  }

  .gallery {
    padding: 0 8em 6em;
  }

  .gallery-head {
    align-items: center;
    display: flex;
    justify-content: space-between;
    width: 100%;
  }

  .mobile-button {
    display: none;
  }

  .desktop-button {
    display: block;
  }

  .grid {
    grid-gap: 20px;
    grid-template-columns: repeat(4, minmax(150px, 1fr));
    grid-template-rows: minmax(460px, 1fr) minmax(460px, 1fr);
    padding: 1em 0 8em;
    margin: 0 auto;
    justify-content: center;
    width: auto;
  }

  .item {
    font-size: 2rem;
  }

  .photo:hover {
    opacity: 0.8;
    transform: scale(1.1);
    transition: 0.2s ease;
  }

  /* ==========
Footer
==========*/
  footer {
    display: grid;
    grid-template-columns: auto auto;
    grid-template-rows: auto auto;
    justify-content: space-between;
    padding: 3em 8em 1em 8em;
    text-align: left;
  }

  .additional-info {
    display: flex;
    flex-direction: row;
    order: 3;
  }

  .additional-info > p {
    padding-right: 1em;
  }

  .contacts {
    order: 2;
    text-align: right;
  }

  .copyright {
    order: 4;
    margin: 0;
    text-align: right;
  }

  .attribution {
    height: 2px;
  }
}

@media (max-width: 45em) {
  /* ==========
Header
==========*/
  h1 {
    padding: 1em;
  }

  /* ==========
Gallery
==========*/
  .grid {
    grid-template-rows: repeat(8, 160px);
  }

  .photo:hover {
    opacity: 0.8;
    transform: scale(1.1);
    transition: 0.2s ease;
  }
}

